--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -5884,3 +5884,8 @@ CONFIG_MACH_XIAOMI_SM8150=y
 # Xiaomi board selection
 #
 CONFIG_MACH_XIAOMI_CEPHEUS=y
+
+#
+# IceMan
+#
+CONFIG_BOEFFLA_WL_BLOCKER=y
