--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -344,4 +344,4 @@ config CPU_PM
 config	BOEFFLA_WL_BLOCKER
 		bool "Boeffla generic wakelock blocker driver"
 		depends on PM
-		default y
+		default n
