--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -655,7 +655,7 @@ CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_OKL4_GUEST=y
 CONFIG_FORCE_MAX_ZONEORDER=11
-CONFIG_UNMAP_KERNEL_AT_EL0=y
+# CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 # CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 # CONFIG_PRINT_VMEMLAYOUT is not set
 # CONFIG_ARM64_SSBD is not set
@@ -775,7 +775,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 
@@ -4378,7 +4378,7 @@ CONFIG_ION=y
 #
 # Qualcomm Atheros CLD WLAN module
 #
-CONFIG_QCA_CLD_WLAN=m
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCA_CLD_WLAN_PROFILE="default"
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
@@ -4462,7 +4462,7 @@ CONFIG_MSM_VIDEOCC_SM8150=y
 CONFIG_MSM_CAMCC_SM8150=y
 CONFIG_CLOCK_CPU_OSM=y
 CONFIG_MSM_DISPCC_SM8150=y
-CONFIG_MSM_DEBUGCC_SM8150=y
+# CONFIG_MSM_DEBUGCC_SM8150 is not set
 CONFIG_MSM_CLK_RPMH=y
 CONFIG_MSM_GPUCC_SM8150=y
 # CONFIG_MSM_GCC_SDMSHRIKE is not set
