--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -3319,6 +3319,7 @@ CONFIG_DRM_SDE_WB=y
 # CONFIG_DRM_SDE_SHD is not set
 # CONFIG_DRM_SDE_SHP is not set
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
+CONFIG_EXPOSURE_ADJUSTMENT=y
 CONFIG_DRM_SDE_RSC=y
 # CONFIG_FENCE_DEBUG is not set
 # CONFIG_DRM_MSM_LEASE is not set
