--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.188 Kernel Configuration
+# Linux/arm64 4.14.189 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -48,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-IceMan_Kernel_v0.1-by-Fagyi"
+CONFIG_LOCALVERSION="-IceMan_Kernel_PELT_v0.1-by-Fagyi"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -573,6 +573,9 @@ CONFIG_ARM64_VA_BITS=39
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=112
+CONFIG_PRIME_CPU_MASK=128
 CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
@@ -781,6 +784,13 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=0
+CONFIG_WAKE_BOOST_DURATION_MS=3000
+CONFIG_MAX_BOOST_FREQ_LP=1632000
+CONFIG_MAX_BOOST_FREQ_PERF=2016000
+CONFIG_MIN_FREQ_LP=1036800
+CONFIG_MIN_FREQ_PERF=1056000
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 
