cepheus: disable unused drivers

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -791,6 +791,7 @@ CONFIG_MAX_BOOST_FREQ_LP=1632000
 CONFIG_MAX_BOOST_FREQ_PERF=2016000
 CONFIG_MIN_FREQ_LP=1036800
 CONFIG_MIN_FREQ_PERF=1056000
+
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 
@@ -1610,7 +1611,7 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_CHR_DEV_OSST is not set
 # CONFIG_BLK_DEV_SR is not set
 CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
+# CONFIG_CHR_DEV_SCH is not set
 CONFIG_SCSI_CONSTANTS=y
 # CONFIG_SCSI_LOGGING is not set
 CONFIG_SCSI_SCAN_ASYNC=y
@@ -3735,7 +3736,7 @@ CONFIG_HID_QVR=y
 #
 CONFIG_USB_HID=y
 # CONFIG_HID_PID is not set
-CONFIG_USB_HIDDEV=y
+# CONFIG_USB_HIDDEV is not set
 
 #
 # I2C HID support
@@ -3768,20 +3769,13 @@ CONFIG_USB_DEFAULT_PERSIST=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PCI=y
 CONFIG_USB_XHCI_PLATFORM=y
-CONFIG_USB_EHCI_HCD=y
-# CONFIG_USB_EHCI_ROOT_HUB_TT is not set
-CONFIG_USB_EHCI_TT_NEWSCHED=y
-CONFIG_USB_EHCI_PCI=y
-# CONFIG_USB_EHCI_MSM is not set
-CONFIG_USB_EHCI_HCD_PLATFORM=y
+# CONFIG_USB_EHCI_HCD is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
 # CONFIG_USB_ISP1362_HCD is not set
 # CONFIG_USB_FOTG210_HCD is not set
 # CONFIG_USB_MAX3421_HCD is not set
-CONFIG_USB_OHCI_HCD=y
-CONFIG_USB_OHCI_HCD_PCI=y
-CONFIG_USB_OHCI_HCD_PLATFORM=y
+# CONFIG_USB_OHCI_HCD is not set
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
@@ -3877,7 +3871,7 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 # CONFIG_USB_HSIC_USB4604 is not set
 CONFIG_USB_LINK_LAYER_TEST=y
 # CONFIG_USB_CHAOSKEY is not set
-CONFIG_USB_REDRIVER_NB7VPQ904M=y
+# CONFIG_USB_REDRIVER_NB7VPQ904M is not set
 # CONFIG_USB_TYPEC_MUX_NXP5150A is not set
 # CONFIG_USB_QCOM_DIAG_BRIDGE is not set
 
