cepheus: update defconfig

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.189 Kernel Configuration
+# Linux/arm64 4.14.191 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -28,7 +28,7 @@ CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_SMP=y
-CONFIG_HOTPLUG_SIZE_BITS=29
+# CONFIG_HOTPLUG_SIZE_BITS is not set
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
 CONFIG_KERNEL_MODE_NEON=y
@@ -613,10 +613,10 @@ CONFIG_HAVE_MEMBLOCK=y
 CONFIG_NO_BOOTMEM=y
 CONFIG_MEMORY_ISOLATION=y
 # CONFIG_HAVE_BOOTMEM_INFO_NODE is not set
-CONFIG_MEMORY_HOTPLUG=y
-CONFIG_MEMORY_HOTPLUG_SPARSE=y
-CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
-CONFIG_MEMORY_HOTPLUG_MOVABLE_NODE=y
+# CONFIG_MEMORY_HOTPLUG is not set
+# CONFIG_MEMORY_HOTPLUG_SPARSE is not set
+# CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE is not set
+# CONFIG_MEMORY_HOTPLUG_MOVABLE_NODE is not set
 CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
@@ -753,10 +753,11 @@ CONFIG_ARCH_SUSPEND_POSSIBLE=y
 # CPU Idle
 #
 CONFIG_CPU_IDLE=y
-CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
+# CONFIG_CPU_IDLE_MULTIPLE_DRIVERS is not set
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
 # CONFIG_CPU_IDLE_GOV_MENU is not set
 CONFIG_DT_IDLE_STATES=y
+CONFIG_CPU_IDLE_GOV_TEO=y
 
 #
 # ARM CPU Idle Drivers
@@ -789,10 +790,8 @@ CONFIG_INPUT_BOOST_DURATION_MS=0
 CONFIG_WAKE_BOOST_DURATION_MS=1500
 CONFIG_INPUT_BOOST_FREQ_LP=1036800
 CONFIG_INPUT_BOOST_FREQ_PERF=1056000
-CONFIG_MAX_BOOST_FREQ_LP=1632000
-CONFIG_MAX_BOOST_FREQ_PERF=2016000
 CONFIG_MIN_FREQ_LP=300000
-CONFIG_MIN_FREQ_PERF=300000
+CONFIG_MIN_FREQ_PERF=710000
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 
@@ -1283,7 +1282,8 @@ CONFIG_XPS=y
 # CONFIG_CGROUP_NET_CLASSID is not set
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
-# CONFIG_BPF_JIT is not set
+CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
 # CONFIG_BPF_STREAM_PARSER is not set
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_SOCKEV_NLMCAST=y
@@ -4606,8 +4606,8 @@ CONFIG_RPMSG_QCOM_GLINK_SPI=y
 #
 # Qualcomm SoC drivers
 #
-CONFIG_QCOM_MEM_OFFLINE=y
-CONFIG_OVERRIDE_MEMORY_LIMIT=y
+# CONFIG_QCOM_MEM_OFFLINE is not set
+# CONFIG_OVERRIDE_MEMORY_LIMIT is not set
 # CONFIG_QCOM_CPUSS_DUMP is not set
 CONFIG_QCOM_RUN_QUEUE_STATS=y
 # CONFIG_QCOM_GSBI is not set
@@ -5312,7 +5312,10 @@ CONFIG_SDCARD_FS=y
 # CONFIG_QNX4FS_FS is not set
 # CONFIG_QNX6FS_FS is not set
 # CONFIG_ROMFS_FS is not set
-# CONFIG_PSTORE is not set
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_PMSG=y
+CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
