cepheus: defconfig: enable CONFIG_DISABLE_TRACE_PRINTK

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -5914,3 +5914,4 @@ CONFIG_CPUSET_SYSTEM_BG="0-3"
 CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=5000
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=10000
+CONFIG_DISABLE_TRACE_PRINTK=y
