--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -143,9 +143,9 @@ CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_CGROUPS=y
 CONFIG_PAGE_COUNTER=y
-# CONFIG_MEMCG is not set
-# CONFIG_MEMCG_SWAP is not set
-# CONFIG_MEMCG_SWAP_ENABLED is not set
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
+CONFIG_MEMCG_SWAP_ENABLED=y
 CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_CGROUP_WRITEBACK=y
@@ -5146,6 +5146,7 @@ CONFIG_RAS=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDERFS is not set
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_LIBNVDIMM is not set
 CONFIG_DAX=y
@@ -5915,7 +5916,4 @@ CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=5000
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=10000
 CONFIG_DISABLE_TRACE_PRINTK=y
-CONFIG_ANDROID_SIMPLE_LMK=y
-CONFIG_ANDROID_SIMPLE_LMK_AGGRESSION=2
-CONFIG_ANDROID_SIMPLE_LMK_MINFREE=192
-CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=100
+CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=y
